Fix gap that appeared below map at certain screen sizes

--- a/map.css
+++ b/map.css
@@ -8,7 +8,7 @@
 }
 
 .topheader {
-    padding-top: 69px;
+    padding-top: 59px;
 }
 
 .error-row-top, .error-row-entry {
